[gd_scene load_steps=4 format=3 uid="uid://bs316jo1hu5c"]

[ext_resource type="Theme" uid="uid://c234uhvpdek3g" path="res://ui/themes/main_theme.tres" id="1_1hdsi"]
[ext_resource type="Script" uid="uid://jkgcw8ntys5y" path="res://ui/start_screen/start_screen.gd" id="2_6eugj"]
[ext_resource type="AudioStream" uid="uid://dxs78aoa4yj64" path="res://ui/start_screen/wrist bone hit.wav" id="3_8hm1g"]

[node name="StartScreen" type="Control" node_paths=PackedStringArray("ButtonVContainer", "StartButton", "OptionsButton", "QuitButton", "SFX_Button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("1_1hdsi")
script = ExtResource("2_6eugj")
ButtonVContainer = NodePath("VBoxContainer")
StartButton = NodePath("VBoxContainer/StartButton")
OptionsButton = NodePath("VBoxContainer/OptionsButton")
QuitButton = NodePath("VBoxContainer/QuitButton")
SFX_Button = NodePath("SFX_Button")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 0.51
offset_top = -400.0
offset_right = 800.51
offset_bottom = 400.0
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Quit"

[node name="SFX_Button" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8hm1g")
